Added jsonld format to data returned from the API. Changed API endpoints to be more in line with REST.
